# moodle-gift-gen

./: .clang-format  CMakeLists.txt  LICENSE  README.md  gift-gen.cpp  moodle-gift-gen.cpp
inputs/: citation-alice-in-wonderland-text.txt  citation-humpty-dumpty-denslow-1903.txt  get-input-tests.sh  odd-file-name.md
outputs/: 30.gift  5.gift
